--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
         </div>
         <script type="text/javascript" src="mathematics.lib.js"></script>
-        <script type="text/javascript" src="webstorage.js"></script>
+        <script type="text/javascript" src="webstorage2.js"></script>
         <script type="text/javascript" src="proceduralBackGround.js"></script>
         <script type="text/javascript" src="modelLoader.js"></script>
         <script type="text/javascript" src="main.js"></script>
