--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
         <div class="sidebar">
         <img src="senzai.png" width="327" height="327"/><br>
         Dinopoler ver0.1d<hr>
-        リーダーボード<br><input id="nameinp" type="text" placeholder="名前を入力してください" /><input type="button" value="登録" onclick="username=document.getElementById('nameinp').value" /><br>順位.名前 スコア<br><t id="rank"></t></div>
+        リーダーボード<br><input id="nameinp" type="text" placeholder="名前を入力してください" /><input id="namesbm" type="button" value="登録" onclick="username=document.getElementById('nameinp').value" /><br>順位.名前 スコア<br><t id="rank"></t></div>
         <div class="content">
             <div class="innercontent">
+                <br>
         <div id="pic">
             <img src="headerimage.png" alt="Dinopoler/Created By Yirty2">
         </div>
@@ -50,11 +51,12 @@
         <hr>
         ＊どんなゲーム？＊<br>
         <br>
-        おたまじゃくしが微生物に体当たりして潮だまりを生き残るゲームです。
-        <br><br>ストーリー<br>
-        海面上昇により、かつての人類の文明は完全にことつきた。それどころか地球のほとんどは海になってしまい、エベレスト山頂は唯一の島となっている。<br>
-        沈みゆく地球の海でクラゲたちは驚くほど多様化した。かなり深くなった海にクラゲのみが適応し、ほかの生物はほぼ絶滅してしまった。<br>
-        その中でおたまじゃくしは脊椎動物の最後の生き残りであった...。
+        <c>おたまじゃくし</c>がクラゲに体当たりしながら、<c>宝物</c>を集めて潮だまりを<c>生き残る</c>ゲームです。
+        <br><br>＊バックストーリー＊<br>
+        大昔、大きな爆発音とともに<c>南極が分裂</c>し、世界のほとんどは<c>海</c>になってしまった。<br>
+        沈みゆく地球の海で<c>クラゲ</c>たちは驚くほど多様に進化した。<br>
+        極限環境と化した海にクラゲが<c>適応</c>し、ほかの生物はほぼいなくなってしまった。<br>
+        その中で<c>おたまじゃくし</c>は脊椎動物最後の<c>生き残り</c>であった...。
         <hr>
         ＊操作方法＊<br>
 <br>
@@ -73,8 +75,8 @@
                 ©2025 by Yirty2 All Rights Reserved.
             </div>
         </div>
-        <script type="text/javascript" src="mathematics.lib.js"></script>
-        <script type="text/javascript" src="webstorage2.js"></script>
+        <script type="text/javascript" src="../mathematics.lib.js"></script>
+        <script type="text/javascript" src="webstorage.js"></script>
         <script type="text/javascript" src="proceduralBackGround.js"></script>
         <script type="text/javascript" src="modelLoader.js"></script>
         <script type="text/javascript" src="main.js"></script>
