--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 ©2025 by Yirty2 All Rights Reserved.
             </div>
         </div>
-        <script type="text/javascript" src="../mathematics.lib.js"></script>
+        <script type="text/javascript" src="mathematics.lib.js"></script>
         <script type="text/javascript" src="webstorage.js"></script>
         <script type="text/javascript" src="proceduralBackGround.js"></script>
         <script type="text/javascript" src="modelLoader.js"></script>
