--- a/index.html
+++ b/index.html
@@ -30,26 +30,22 @@
         <canvas class="canvas" width="0" height="0"></canvas>
         <div id="description">
         <div id="uenoyatsu">
-        <a href="https://github.com/yrty2"><img src="yirty2.webp" width=3% height=3%><lb>Yirty</lb>2</a>　　　　　<counter>今日のお客さん<t id="populationCount"></t>人</counter>
+        <a href="https://github.com/yrty2"><img src="image/yirty2.webp" width=3% height=3%><lb>Yirty</lb>2</a>　　　　　<counter>遊んだお客さん<t id="populationCount"></t>人</counter>
         </div>
         <hr>
-        <div class="sidebar">
-        <img src="senzai.png" width="327" height="327"/><br>
-        Dinopoler ver0.1d<hr>
-        リーダーボード<br><input id="nameinp" type="text" placeholder="名前を入力してください" /><input id="namesbm" type="button" value="登録" onclick="username=document.getElementById('nameinp').value" /><br>順位.名前 スコア<br><t id="rank"></t></div>
         <div class="content">
             <div class="innercontent">
                 <br>
         <div id="pic">
-            <img src="headerimage.png" alt="Dinopoler/Created By Yirty2">
+            <img src="image/headerimage.png" alt="Dinopoler/Created By Yirty2">
         </div>
         <div id="cen">
             <br>
-            <br>Dinopoler　おたまじゃくし突進アクション<br>
-        画像クリックでスタート
+            <br>ダイノポーラー　おたまじゃくし突進アクション<br>
+        ↑画像クリックでスタート↑
         </div>
         <hr>
-        ＊どんなゲーム？＊<br>
+        <img src="image/はてな.png" width=10% height=10% />＊どんなゲーム？＊<br>
         <br>
         <c>おたまじゃくし</c>がクラゲに体当たりしながら、<c>宝物</c>を集めて潮だまりを<c>生き残る</c>ゲームです。
         <br><br>＊バックストーリー＊<br>
@@ -58,7 +54,7 @@
         極限環境と化した海にクラゲが<c>適応</c>し、ほかの生物はほぼいなくなってしまった。<br>
         その中で<c>おたまじゃくし</c>は脊椎動物最後の<c>生き残り</c>であった...。
         <hr>
-        ＊操作方法＊<br>
+        <img src="image/曲線.png" width=8% height=8% id="curve" />＊操作方法＊<br>
 <br>
         [W]:上へ進む<br>
         [A]:左へ進む<br>
@@ -68,14 +64,23 @@
         [Q]:ポーズ
         <hr>
         ＊Screen Shots＊※開発段階の画像です<br>
-        <img src="sc1.png" width=50% height=50%>
+        <img src="image/sc1.png" width=50% height=50%>
+        <br>
+        ＊お問い合わせ＊<br><!各項目に簡単なイラストとか貼りたい>
+        バグのレポートみたいなやつ。感想を書いてもいいよ<br>
+        <textarea id="report"></textarea><input type="button" id="reportsbm" value="送信" onclick="this.disabled=true; sendmail(document.getElementById('report').value)" />
         </div>
         </div>
-            <div class="foot">
+        <div class="sidebar">
+        <img src="image/senzai.png" width="327" height="327"/><br>
+        Dinopoler ver1.0<c>e</c><hr>
+        リーダーボード<br><input id="nameinp" type="text" placeholder="名前を入力してください" /><input id="namesbm" type="button" value="登録" onclick="username=document.getElementById('nameinp').value" /><br>平均:<t id="mean"></t><br><t id="rank"></t>
+        </div>
+        <div class="foot">
                 ©2025 by Yirty2 All Rights Reserved.
-            </div>
         </div>
-        <script type="text/javascript" src="mathematics.lib.js"></script>
+        </div>
+        <script type="text/javascript" src="../mathematics.lib.js"></script>
         <script type="text/javascript" src="webstorage.js"></script>
         <script type="text/javascript" src="proceduralBackGround.js"></script>
         <script type="text/javascript" src="modelLoader.js"></script>
