--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
                 ©2025 by Yirty2 All Rights Reserved.
         </div>
         </div>
-        <script type="text/javascript" src="mathematics.lib.js"></script>
+        <script type="text/javascript" src="../mathematics.lib.js"></script>
         <script type="text/javascript" src="webstorage.js"></script>
         <script type="text/javascript" src="proceduralBackGround.js"></script>
         <script type="text/javascript" src="modelLoader.js"></script>
+        <script type="text/javascript" src="gamepad.js"></script>
         <script type="text/javascript" src="main.js"></script>
         <script type="text/javascript" src="gpu.js"></script>
         <script type="text/javascript" src="BGMplayer.js"></script>
