--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
         <video id="intro" controls width="310"><br>
   <source src="media/test.webm" type="video/webm" />
 </video><br>
-        Dinopoler ver1.1<c>h</c></c><hr>
+        Dinopoler ver1.1<c>i</c><hr>
         リーダーボード<br><input id="nameinp" type="text" placeholder="名前を入力してください" /><input id="namesbm" type="button" value="登録" onclick="username=document.getElementById('nameinp').value; this.disabled=true" /><br>平均:<t id="mean"></t><br><t id="rank"></t>
         </div>
         <div class="foot">
                 ©2025 by Yirty2 All Rights Reserved.
         </div>
         </div>
-        <script type="text/javascript" src="mathematics.lib.js"></script>
+        <script type="text/javascript" src="../mathematics.lib.js"></script>
         <script type="text/javascript" src="webstorage.js"></script>
         <script type="text/javascript" src="proceduralBackGround.js"></script>
         <script type="text/javascript" src="modelLoader.js"></script>
