--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
         Garageband:作曲ソフト,音源<br>
         Medly:作曲ソフト,音源<br><br>
         その他、参考にしたすべてのゲームに感謝する<br>
-        
+        <br>
+        ＊ブラウザ設定＊<br>
+        音量:<input type="range" min="0" max="3" step="1" value="1" id="volmc" onchange="exss=this.value; storage.setItem('exss',parseInt(this.value));" />
         </div>
         </div>
         <div class="sidebar">
@@ -92,7 +94,7 @@
                 ©2025 by Yirty2 All Rights Reserved.
         </div>
         </div>
-        <script type="text/javascript" src="mathematics.lib.js"></script>
+        <script type="text/javascript" src="../mathematics.lib.js"></script>
         <script type="text/javascript" src="webstorage.js"></script>
         <script type="text/javascript" src="proceduralBackGround.js"></script>
         <script type="text/javascript" src="modelLoader.js"></script>
