--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         その他、参考にしたすべてのゲームに感謝する<br>
         <br>
         ＊ブラウザ設定＊<br>
-        音量:<input type="range" min="0" max="2" step="0.1" value="1" id="volmc" onchange="exss=this.value; storage.setItem('exss',parseInt(this.value));" />
+        音量:<input type="range" min="0" max="3" step="1" value="1" id="volmc" onchange="exss=this.value; storage.setItem('exss',parseInt(this.value));" />
         </div>
         </div>
         <div class="sidebar">
@@ -94,8 +94,8 @@
                 ©2025 by Yirty2 All Rights Reserved.
         </div>
         </div>
-        <script type="text/javascript" src="mathematics.lib.js"></script>
-        <script type="text/javascript" src="webstorage2.js"></script>
+        <script type="text/javascript" src="../mathematics.lib.js"></script>
+        <script type="text/javascript" src="webstorage.js"></script>
         <script type="text/javascript" src="proceduralBackGround.js"></script>
         <script type="text/javascript" src="modelLoader.js"></script>
         <script type="text/javascript" src="gamepad.js"></script>
